--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
   <body>
     <% if current_user %>
       <%= link_to 'tasks', tasks_path %>
-      <%= link_to 'users', admin_users_path %>
+      <% if current_user.admin? %>
+        <%= link_to 'users', admin_users_path %>
+      <% end %>
       <%= link_to 'sign out', logout_path, method: :delete %>
     <% else %>
       <%= link_to 'sign in', login_path %>
