--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Description:</strong>
-  <%= @task.description %>
+  <%= auto_link(simple_format(h(@task.description), {}, sanitize: false, wrapper_tag: "div")) %>
 </p>
 
 <%= link_to 'Edit', edit_task_path(@task) %> |
